Add UTM term report endpoint
